--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
+    "video.js": "^8.0.4",
     "zod": "^3.20.6"
   },
   "devDependencies": {
