--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@mui/material": "^5.11.10",
     "@tanstack/react-query": "^4.24.10",
     "axios": "^1.3.4",
+    "hls.js": "^1.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-player": "^2.11.2",
     "react-router-dom": "^6.8.1",
     "zod": "^3.20.6"
   },
